feat: DATA-1730 Subscription SM with LineRef filter